<resources>
    <string name="app_name">e-Cop</string>
    <string name="default_desc">description not set</string>
    <string name="tagline">Online police complaint portal</string>
    <string name="welcome">WELCOME</string>
    <string name="login_req">Please Login</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="_123">123</string>
    <string name="abc">abc</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="govt">GOVERNMENT OF KARNATAKA</string>
    <string name="policedept">DEPARTMENT OF POLICE</string>
    <string name="user_id">User ID</string>
    <string name="title_activity_civil_home">CivilHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
